Fixed pie chart slices not showing issue and removed certain css styling used for debugging

--- a/BudgetTracker/static/css/edit_budget.css
+++ b/BudgetTracker/static/css/edit_budget.css
@@ -16,7 +16,6 @@
   padding-top: 3em;
   font-family: robotoBold;
   color: #384b41;
-  border: 1px solid red;
 }
 
 label {
